# jj-superpowers

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  RELEASE-NOTES.md  gemini-extension.json  package.json
.claude-plugin/: marketplace.json
.codex/: INSTALL.md
.copilot-plugin/: INSTALL.md  plugin.json
.cursor-plugin/: plugin.json
.opencode/: INSTALL.md
agents/: sdd-implementer.md  sdd-jj-coordinator.md  sdd-quality-reviewer.md  sdd-spec-reviewer.md  sdd-verifier.md
docs/: README.codex.md  README.opencode.md  testing.md
hooks/: session-start
pseudocode/: README.md  _shared.tsx  brainstorming.tsx  catalog.tsx  codebase-cleanup.tsx  designing-with-types-and-abstractions.tsx  dispatching-parallel-agents.tsx  doc-wishlist.tsx  documentation.tsx  dot-to-jj-dag.tsx  executing-plans.tsx  finishing-a-development-branch.tsx  jj-agent-config.tsx  jj-clean-history.tsx  jj-hunk.tsx  jj-reorg-changes.tsx  jj-split-parallel.tsx  jujutsu.tsx  receiving-code-review.tsx  requesting-code-review.tsx  subagent-driven-development.tsx  systematic-debugging.tsx  test-driven-development.tsx  using-jj-worksets.tsx  using-superpowers.tsx  uv-guide.tsx  verification-before-completion.tsx  wish-i-had.tsx  wish-i-knew.tsx  writing-plans.tsx  writing-skills.tsx
skills/subagent-driven-development/: SKILL.md  code-quality-reviewer-prompt.md  implementer-prompt.md  jj-coordinator-prompt.md  jj-dag-builder-prompt.md  pyproject.toml  spec-reviewer-prompt.md  verification-prompt.md
skills/subagent-driven-development/tests/: __init__.py  test_dot_to_jj_dag.py
(+110 files in other folders)
