[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jj-dag-builder"
version = "0.1.0"
description = "Convert DOT digraphs to jj change DAGs"
requires-python = ">=3.9"
dependencies = [
    "networkx>=3.0",
    "pygraphviz>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
